--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
-spring.datasource.url=jdbc:mysql://192.168.1.2:3333/tasks
+#spring.datasource.url=jdbc:mysql://192.168.1.2:3333/tasks
+spring.datasource.url=jdbc:mysql://192.168.1.2:3333/sakila
 spring.datasource.username=root
 spring.datasource.password=0000
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
